# checker_anilist_rust

./: Cargo.toml
src/: main.rs  model.rs
